--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,115 @@
+html,
 body {
-  font-family: sans-serif;
+  height: 100%;
+  background-color: #50d673;
+  font-family:
+    SF Pro Text,
+    -apple-system,
+    Source Sans Pro,
+    BlinkMacSystemFont,
+    Roboto,
+    Segoe UI,
+    Helvetica,
+    Arial,
+    sans-serif,
+    "Apple Color Emoji",
+    "Segoe UI Emoji",
+    Segoe UI Symbol;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-size: 16px;
+}
+
+header {
+  height: 8%;
+  background-color: white;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.logo {
+  display: flex;
+}
+
+.logo h1 {
+  font-weight: bold;
+  color: #2d4884;
+  margin: 0 auto;
+  font-size: 3rem;
+}
+
+.username-container {
+  display: flex;
+  align-items: center;
+  color: #2d4884;
+  padding-right: 5%;
+}
+
+.fa-pen-to-square {
+  padding-left: 10px;
+  cursor: pointer;
+}
+.start-menu {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.game-name {
+  color: #fff;
+  font-size: 80px;
+  font-weight: 500;
+  margin-bottom: 15px;
+  text-align: center;
+}
+
+.game-description {
+  color: #fff;
+  font-size: 24px;
+  margin-bottom: 0px;
+  text-align: center;
+}
+
+.game {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 5%;
+}
+
+.play-Btn {
+  background-color: #ffd154;
+  padding: 12px 30px;
+  border: none;
+  font-size: 18px;
+  color: #333333;
+  font-weight: 600;
+  margin-bottom: 32px;
+  border-radius: 3px;
+  cursor: pointer;
+  transition: background 0.1s;
+}
+
+.play-Btn:hover {
+  background-color: #fff;
+}
+
+.leaderboard {
+  width: 10%;
+  transition: background 0.1s;
+}
+
+.leaderboard img {
+  width: 100%;
+}
+
+@media (max-width: 900px) {
+  .logo h1 {
+    display: none;
+  }
 }
