--- a/src/styles.css
+++ b/src/styles.css
@@ -61,9 +61,9 @@ header {
 
 .game-name {
   color: #fff;
-  font-size: 80px;
+  font-size: 50px;
   font-weight: 500;
-  margin-bottom: 15px;
+  margin: 15% 0 1% 0;
   text-align: center;
 }
 
